# github-master-to-slaves

./: .env.example  .gitignore  COMPLETE.md  FORK_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  JUSTFILE_ADDED.md  QUICKSTART.md  README.md  UV_MIGRATION.md  config.json  discover.py  export.py  justfile  pyproject.toml  sync.py  test_auth.py  test_setup.py  verify.py
settings/: branch-protection.example.json
src/: applier.py  comparator.py  config.py  discovery.py  exporter.py  github_client.py  logger.py  validator.py
